# speech-recognizer-bahasa-indonesian

./: .gitattributes  .metadata  404.html  CODE_OF_CONDUCT.md  README.md  index.html  mkdocs.yml  sitemap.xml
.github/: ISSUE_TEMPLATE.md
android/: settings.gradle
contributing/: index.html
speech_recognizer/android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
speech_recognizer/android/app/src/debug/: AndroidManifest.xml
speech_recognizer/android/app/src/main/: AndroidManifest.xml
speech_recognizer/android/app/src/main/assets/model-id-id/: uuid
speech_recognizer/android/app/src/main/assets/model-id-id/am/: tree
speech_recognizer/android/app/src/main/assets/model-id-id/conf/: mfcc.conf  model.conf
speech_recognizer/android/app/src/main/assets/model-id-id/graph/: CL_2_1.fst  Gr.fst  Ha.fst  L_disambig_det.fst  disambig_ilabels_2_1.int  disambig_tid.int  ilabels_2_1  num_pdfs  phones.txt  relabel  words.txt
speech_recognizer/android/app/src/main/assets/model-id-id/graph/phones/: align_lexicon.int  align_lexicon.txt  disambig.int  disambig.txt  optional_silence.txt  silence.csl  word_boundary.int  word_boundary.txt
speech_recognizer/android/app/src/main/assets/model-id-id/ivector/: final.dubm  final.ie.id  final.mat  global_cmvn.stats  online_cmvn.conf  splice.conf  splice_opts
speech_recognizer/android/app/src/main/cpp/: bookbot_api.cc  bookbot_api.h  bookbot_recognizer.cc  bookbot_recognizer.h  language_model.cc  model.cc
speech_recognizer/android/app/src/main/cpp/include/base/: kaldi-common.h  version.h
speech_recognizer/android/app/src/main/cpp/include/cudadecoder/: lattice-postprocessor.h
speech_recognizer/android/app/src/main/cpp/include/decoder/: lattice-incremental-decoder.h
speech_recognizer/android/app/src/main/java/com/bookbot/: LibBookbot.java  Model.java  Recognizer.java
speech_recognizer/android/app/src/main/java/com/bookbot/vosk/: StorageService.java  StreamWritingVoskService.java
speech_recognizer/android/app/src/main/java/org/vosk/android/: RecognitionListener.java
speech_recognizer/android/app/src/main/kotlin/com/bookbot/speech_recognizer/: MainActivity.kt  SpeechController.kt
speech_recognizer/android/app/src/main/kotlin/com/bookbot/speech_recognizer/service/: SpeechService.kt  VoskSpeechService.kt
(+159 files in other folders)
